tests/ui/fail_external_trait_def_no_with_uses.stderr
error[E0412]: cannot find type `Arg` in this scope
  --> tests/ui/fail_external_trait_def_no_with_uses.rs:43:27
   |
43 |         fn hi(&self, arg: Arg) -> String;
   |                           ^^^ not found in this scope
...
55 | #[thin_delegate::fill_delegate(external_trait_def = __external_trait_def)]
   | -------------------------------------------------------------------------- in this procedural macro expansion
   |
   = note: this error originates in the macro `__external_trait_def::__thin_delegate__feed_trait_def_of_external_Hi` which comes from the expansion of the attribute macro `thin_delegate::fill_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
   |
4  + use crate::external::Arg;
   |

warning: unused import: `crate::external::Arg`
  --> tests/ui/fail_external_trait_def_no_with_uses.rs:31:9
   |
31 |     use crate::external::Arg;
   |         ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default
